--- a/mern-auth/package.json
+++ b/mern-auth/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.6.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-router-dom": "^5.0.1",
     "validator": "^11.1.0"
   },
   "devDependencies": {
